k8s/mkdocs-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: mkdocs-lb
  labels:
    app: mkdocs
spec:
  selector:
    app: mkdocs
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  # For cloud providers like AWS, GCP, Azure
  # This will create an external load balancer
  # and assign an external IP address
