k8s/mkdocs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mkdocs
spec:
  selector:
    app: mkdocs
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080  # Access via localhost:30080
